change move + replay not finished
