# server/src/dto/move.dto.ts
@@ -1,16 +1,20 @@
 export interface MoveInputDTO {
   gameHistory_id: number;
-  isABlackPiece: boolean;
-  whichPiece: string;
-  from: number[];
-  to: number[];
+  promotion: boolean;
+  promotionIntoWhichPiece: string;
+  from_x: number;
+  from_y: number;
+  to_x: number;
+  to_y: number;
 }
 
 export interface MoveOutputDTO {
   id: number;
   gameHistory_id: number;
-  isABlackPiece: boolean;
-  whichPiece: string;
-  from: number[];
-  to: number[];
+  promotion: boolean;
+  promotionIntoWhichPiece: string;
+  from_x: number;
+  from_y: number;
+  to_x: number;
+  to_y: number;
 }
