# server/src/routes/index.ts
@@ -82,6 +82,7 @@ const models: TsoaRoute.Models = {
         "dataType": "refObject",
         "properties": {
             "username": {"dataType":"string","required":true},
+            "id": {"dataType":"double","required":true},
             "elo": {"dataType":"double","required":true},
         },
         "additionalProperties": false,
@@ -92,10 +93,12 @@ const models: TsoaRoute.Models = {
         "properties": {
             "id": {"dataType":"double","required":true},
             "gameHistory_id": {"dataType":"double","required":true},
-            "isABlackPiece": {"dataType":"boolean","required":true},
-            "whichPiece": {"dataType":"string","required":true},
-            "from": {"dataType":"array","array":{"dataType":"double"},"required":true},
-            "to": {"dataType":"array","array":{"dataType":"double"},"required":true},
+            "promotion": {"dataType":"boolean","required":true},
+            "whicpromotionIntoWhichPiecehPiece": {"dataType":"string","required":true},
+            "from_x": {"dataType":"double","required":true},
+            "from_y": {"dataType":"double","required":true},
+            "to_x": {"dataType":"double","required":true},
+            "to_y": {"dataType":"double","required":true},
         },
         "additionalProperties": false,
     },
